# slot-booking-system

./: .dependency-cruiser.cjs  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.yaml  .npmrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE-MIT  NOTICE  README.md  SECURITY.md  _typos.toml  biome.json  cliff.toml  committed.toml  docker-compose.yml  eslint.config.js  knip.json  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  init.yml  mutation.yml  security.yml  tmpl-verify.yml
.template/: bootstrap.sh  manifest.toml  state.toml
.template/layers/adr-madr/: layer.toml
.template/layers/conventional-commits/: layer.toml
.template/layers/core/: layer.toml
.template/layers/core/files/: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md.j2  LICENSE-MIT.j2  NOTICE.j2  README.md.j2  SECURITY.md.j2  mise.toml.j2
.template/layers/dependabot-actions/: layer.toml
.template/layers/docker-dev/: layer.toml
.template/layers/docker-dev/files/: .dockerignore  Dockerfile  docker-compose.yml
.template/layers/lefthook/: layer.toml
.template/layers/lefthook/files/: lefthook.yml
.template/layers/rust-workspace/: layer.toml
.template/layers/rust-workspace/files/: Cargo.toml.j2  Justfile  clippy.toml  deny.toml  lefthook.yml  rustfmt.toml
.template/layers/typescript-package/: layer.toml
.template/layers/typescript-package/files/: Justfile  biome.json  lefthook.yml  package.json.j2  tsconfig.json  vitest.config.ts
.template/layers/typos/: layer.toml
.template/layers/typos/files/: _typos.toml
.template/layers/xtask/: layer.toml
.template/layers/xtask/files/crates/xtask/: Cargo.toml
.template/layers/xtask/files/crates/xtask/src/: main.rs
.template/tmpl/: Cargo.toml  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.template/tmpl/schema/: manifest.schema.json
.template/tmpl/src/: ctx.rs  dag.rs  error.rs  layer.rs  lib.rs  main.rs  manifest.rs  render.rs  state.rs  template.rs
apps/default/: .dev.vars.example  .size-limit.json  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts  wrangler.toml
apps/default/dev/: otel-collector.yaml
apps/default/migrations/: 0000_fat_ravenous.sql  0000_init.sql  0000_simple_stranger.sql  0001_queue_init.sql  0001_smooth_dark_phoenix.sql
apps/default/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
apps/default/openapi/: openapi.json
apps/default/scripts/: gen-api-spec.ts  gen-error-docs.ts  print-schema.ts  schema-drift-check.sh  seed-dev.sh  smoke-available-slots.sh  smoke-booking-flow.sh  smoke-queue-flow.sh  smoke-queue-ws.sh  smoke-reservation-flow.sh  write-openapi-json.ts
apps/default/seed/: seed.ts
apps/default/src/: worker.ts
apps/default/src/server/: schema.ts
apps/default/test/: worker.otelConfig.test.ts
apps/default/test/durableObjects/: ddl.test.ts
apps/default/test/effectRpc/: doCrashRecovery.test.ts  spanEmission.test.ts  transport.test.ts
apps/default/test/graphql/: derive.test.ts  effectRpcRunner.test.ts  (+5 more)
apps/web/: package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
apps/web/messages/: en.json  ja.json
apps/web/project.inlang/: settings.json
apps/web/src/: app.css  app.d.ts  app.html  graphql-scalars.d.ts  hooks.client.ts  hooks.server.ts
apps/web/static/: sw.js
apps/web/test/: calledAlert.test.ts  chimeController.test.ts  queueFeedMachine.test.ts  sanity.test.ts  ticketCache.test.ts
docs/: ADR_INDEX.md  SYSTEM.md  dev-workflow.md  error-codes.md  errors.md  glossary.md  observability.md  onboarding.md  openapi.json  runbook.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-booking-code-entropy.md  0003-typeid-prefixes.md  0004-temporal-only-no-date.md  0005-hold-store-do-only.md  0006-do-d1-outbox-sync.md  0007-no-handoff-slot-phase0.md  0008-app-vs-core-layout.md  0009-logging-pii-discipline.md  0010-forbidden-constructs.md  0011-core-distribution-shape.md  0012-bitmap-slot-calculation.md  0013-total-state-transitions.md  0014-self-validating-booking-code.md  0015-docker-only-development.md  0016-always-latest-releases.md  0017-error-handling.md  0018-functional-core-imperative-shell.md  0019-schema-boundary.md  0020-port-tags.md  0021-tsc-references.md  0026-logger-clock-port.md  0027-day-schedule-durable-object.md  0028-do-sql-storage.md  0029-event-sourced-repository.md  0030-do-rpc-either.md  0031-xstate-removal.md  0032-bitemporal-versioning-row-codec.md  0033-capability-newtype-bloom-removal.md  0034-greedy-slot-matching.md  0035-d1-batch-atomicity-limits.md  0036-schema-source-of-truth.md  0037-effect-rpc-do-transport.md  0038-otel-semconv-unification.md  0039-effect-4-drizzle-1-migration.md  0040-bipartite-slot-matching.md  0041-graphql-functor-migration.md  0042-runtime-mode-port.md  0043-error-redaction-port.md  (+61 more)
docs/api/: graphql.md
docs/dev/: diagnose-multi-angle.md  diagnose.md  fuzz.md  queue-pivot-status.md
docs/migration/: effect-4.md
docs/operator/: runbook.md
scripts/: check-parallel.sh  check.ts  dev-exec.sh  dev-exec.ts  diagnose-arch.sh  diagnose-biome.sh  diagnose-eslint.sh  diagnose-guards.sh  diagnose-multi-angle.sh  diagnose-test.sh  diagnose-tsc.sh  diagnose.sh  diagnose.ts  fix-perms.sh  package.json  run-gate.sh  test-runner.sh  tsconfig.json  vitest.config.ts
scripts/diagnose/: arch.ts  biome.ts  eslint.ts  guards.ts  multiAngle.ts  test.ts  tsc.ts  types.ts
scripts/fuzz/: run-soak.sh  runSoak.ts
scripts/lib/: exec.ts  processGroup.ts  sleep.ts
scripts/lint/: comment-bans.pattern  comment-bans.sh  comment-bans.ts
scripts/test/: runner.ts  streamReporter.ts
scripts/test/lib/: exit.test.ts  exit.ts  heartbeat.ts  streamEvents.ts
(+215 files in other folders)
